unpackaged/main/default/objects/ia_crm__Project_Type__c/ia_crm__Project_Type__c.object-meta.xml
<CustomObject>
    <label>Project Type</label>
    <nameField>
        <label>Project Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>