unpackaged/main/default/objects/ia_crm__Project_Type__c/fields/ia_crm__Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Parent_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Type</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ia_crm__Project_Type__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Project_Type__c</referenceTo>
    <relationshipLabel>Projects Type</relationshipLabel>
    <relationshipName>Parent_Type</relationshipName>
    <type>Lookup</type>
</CustomField>