unpackaged/main/default/objects/ia_crm__Project_Type__c/fields/ia_crm__Status__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>